--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,9 @@ dependencies {
     //implementation "com.android.support:appcompat-v7:${supportLibVersion}"
     //implementation "com.android.support:design:${supportLibVersion}"
     // for logging API calls to LogCat
+
+    implementation 'com.github.bumptech.glide:glide:4.7.1'
+    // Glide v4 uses this new annotation processor -- see https://bumptech.github.io/glide/doc/generatedapi.html
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
+
 }
