--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,18 +23,19 @@
         <activity android:name=".HomeActivity" />
         <activity
             android:name=".bottomNavActivity"
-            android:label="@string/title_activity_bottom_nav"></activity>
-
+            android:label="@string/title_activity_bottom_nav" />
 
         <provider
             android:name="android.support.v4.content.FileProvider"
             android:authorities="codepath.kaughlinpractice.kaughlin_insta"
             android:exported="false"
-            android:grantUriPermissions="true" >
+            android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/fileprovider" />
         </provider>
+
+        <activity android:name=".SignupActivity"></activity>
     </application>
 
 </manifest>
